@@ -4,19 +4,15 @@ import me.cortex.voxy.client.core.gl.Capabilities;
 import me.cortex.voxy.client.core.gl.GlBuffer;
 import me.cortex.voxy.client.core.gl.GlTexture;
 import me.cortex.voxy.client.core.model.ModelFactory;
-import me.cortex.voxy.client.core.rendering.section.geometry.BasicSectionGeometryData;
-import me.cortex.voxy.client.core.rendering.section.geometry.IGeometryData;
 import me.cortex.voxy.common.Logger;
 import me.cortex.voxy.common.util.ThreadUtils;
 import me.cortex.voxy.common.util.TrackedObject;
-import me.cortex.voxy.commonImpl.VoxyCommon;
 
 import java.util.ArrayList;
 
 import static org.lwjgl.opengl.ARBSparseBuffer.GL_SPARSE_STORAGE_BIT_ARB;
 import static org.lwjgl.opengl.GL11.GL_RGBA8;
 import static org.lwjgl.opengl.GL11C.*;
-import static org.lwjgl.opengl.GL11C.GL_NO_ERROR;
 
 //System to allow reuse/recycling of render buffer/texture allocations
 // specfically the geometry buffer and texture atlas allocation
@@ -36,7 +32,7 @@ public class RenderResourceReuse {
     public static GlTexture getOrCreateModelStoreTextureAtlas() {
         GlTexture atlas = null;
         if (!MODEL_TEXTURE_CACHE.isEmpty()) {
-            atlas = MODEL_TEXTURE_CACHE.removeFirst().zero();
+            atlas = MODEL_TEXTURE_CACHE.remove(0).zero();
         } else {
             atlas = new GlTexture().store(GL_RGBA8,
                         Integer.numberOfTrailingZeros(ModelFactory.MODEL_TEXTURE_SIZE),
@@ -53,7 +49,7 @@ public class RenderResourceReuse {
     static GlBuffer getOrCreateGeometryBuffer() {
         GlBuffer buffer = null;
         if (!GEOMETRY_BUFFER_CACHE.isEmpty()) {
-            buffer = GEOMETRY_BUFFER_CACHE.removeFirst();
+            buffer = GEOMETRY_BUFFER_CACHE.remove(0);
             //Reuse buffer, todo: probably check the geometry size and try upsize if possible
         } else {
             long capacity = getGeometryBufferSize();
