@@ -97,7 +97,6 @@ public class IrisVoxyRenderPipelineData {
     public static IrisVoxyRenderPipelineData buildPipeline(IrisRenderingPipeline ipipe, IrisShaderPatch patch, CustomUniforms cu, ShaderStorageBufferHolder ssboHolder) {
         var uniforms = createUniformLayoutStructAndUpdater(createUniformSet(cu, patch));
 
-
         var imageSet = createImageSet(ipipe, patch);
 
         var ssboSet = createSSBOLayouts(patch.getSSBOs(), ssboHolder);
@@ -173,7 +172,7 @@ public class IrisVoxyRenderPipelineData {
             layout.put(pos, uniform); pos += getSizeAndAlignment(uniform.type)>>5;
             //We must get a size 1 to pad to align 4
             if (!ordering[3].isEmpty()) {//Size 1
-                uniform = ordering[3].removeFirst();
+                uniform = ordering[3].remove(0);
                 layout.put(pos, uniform); pos += getSizeAndAlignment(uniform.type)>>5;
             } else {//Padding must be injected
                 pos += 1;
@@ -347,7 +346,7 @@ public class IrisVoxyRenderPipelineData {
             public DynamicLocationalUniformHolder uniform3f(String name, Supplier<Vector3f> value, ValueUpdateNotifier notifier) {
                 this.injectDynamicUniformType(name, UniformType.VEC3, offset->{
                     return ptr->{
-                      value.get().getToAddress(ptr+offset);
+                        value.get().getToAddress(ptr+offset);
                     };
                 });
                 return this;
@@ -428,7 +427,7 @@ public class IrisVoxyRenderPipelineData {
         return uniforms;
     }
 
-    private record TextureWSampler(String name, IntSupplier texture, IntSupplier sampler) { }
+    private record TextureWSampler(String name, IntSupplier texture, int sampler) { }
     public record ImageSet(String layout, IntConsumer bindingFunction) {
 
     }
@@ -465,23 +464,20 @@ public class IrisVoxyRenderPipelineData {
             }
 
             @Override
-            public boolean addDefaultSampler(TextureType type, IntSupplier texture, ValueUpdateNotifier notifier, Supplier<GlSampler> sampler, String... names) {
+            public boolean addDefaultSampler(TextureType type, IntSupplier texture, ValueUpdateNotifier notifier, GlSampler sampler, String... names) {
                 Logger.error("Unsupported default sampler");
                 return false;
             }
 
             @Override
-            public boolean addDynamicSampler(TextureType type, IntSupplier texture, Supplier<GlSampler> sampler, String... names) {
+            public boolean addDynamicSampler(TextureType type, IntSupplier texture, GlSampler sampler, String... names) {
                 return this.addDynamicSampler(type, texture, null, sampler, names);
             }
 
             @Override
-            public boolean addDynamicSampler(TextureType type, IntSupplier texture, ValueUpdateNotifier notifier, Supplier<GlSampler> sampler, String... names) {
+            public boolean addDynamicSampler(TextureType type, IntSupplier texture, ValueUpdateNotifier notifier, GlSampler sampler, String... names) {
                 if (!this.hasSampler(names)) return false;
-                samplerSet.add(new TextureWSampler(this.name(names), texture, sampler!=null?()->{
-                    var s = sampler.get();
-                    return s!=null?s.getId():-1;
-                }:()->-1));
+                samplerSet.add(new TextureWSampler(this.name(names), texture, sampler!=null?sampler.getId():-1));
                 return true;
             }
 
@@ -491,9 +487,9 @@ public class IrisVoxyRenderPipelineData {
                 var name = this.name(names);
                 var ex = externalTextures.get(name);
                 if (ex != null) {
-                    samplerSet.add(new TextureWSampler(name, ex, () -> 0));//unbind any sampler and use the externalTextureSupplier
+                    samplerSet.add(new TextureWSampler(name, ex, 0));//unbind any sampler and use the externalTextureSupplier
                 } else {
-                    samplerSet.add(new TextureWSampler(name, () -> texture, () -> -1));
+                    samplerSet.add(new TextureWSampler(name, () -> texture, -1));
                 }
             }
         };
@@ -537,9 +533,8 @@ public class IrisVoxyRenderPipelineData {
                 int unit = j+base;
                 var ts = samplers[j];
                 glBindTextureUnit(unit, ts.texture.getAsInt());
-                int sampler = ts.sampler.getAsInt();
-                if (sampler != -1) {
-                    glBindSampler(unit, sampler);
+                if (ts.sampler != -1) {
+                    glBindSampler(unit, ts.sampler);
                 }//TODO: might need to bind sampler 0
             }
         };
